<resources>
    <string name="app_name">Ex4_ColorTriviaFragment</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_trivia_game">Welcome to Trivia Game</string>
    <string name="colors">Colors</string>
    <string name="animals">Animals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_question">Image Question</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
</resources>